--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -4,7 +4,7 @@
     xmlns:mvc="sap.ui.core.mvc"
 >
     <Panel
-        headerText="{/panelHeaderText}"
+        headerText="{i18n>panelHeaderText}"
         class="sapUiResponsiveMargin"
         width="auto"
     >
@@ -12,20 +12,20 @@
             editbale="true"
             layout="ColumnLayout"
         >
-            <Label text="First Name"/>
+            <Label text="{i18n>firstName}"/>
             <Input
                 value="{/firstName}"
                 valueLiveUpdate="true"
                 width="200px"
                 enabled="{/enabled}"
             />
-            <Label text="Last Name"/>
+            <Label text="{i18n>lastName}"/>
             <Input value="{/lastName}"
                 valueLiveUpdate="true"
                 width="200px"
                 enabled="{/enabled}"
             />
-            <Label text="Enabled"/>
+            <Label text="{i18n>enabled}"/>
             <CheckBox selected="{/enabled}"/>
         </form:SimpleForm>
     </Panel>
