--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,4 +1,5 @@
 <mvc:View
+    controllerName="sap.ui.demo.db.controller.App"
     xmlns="sap.m"
     xmlns:form="sap.ui.layout.form"
     xmlns:l="sap.ui.layout"
@@ -47,6 +48,16 @@
                     {/address/city}&lt;br&gt;{/address/country}"
                     id="address"
                     width="200px"
+                />
+                <Link
+                    href="{
+                        parts: [
+                            '/firstName',
+                            '/lastName'
+                        ],
+                        formatter: '.formatMail'
+                    }"
+                    text="{i18n>sendEmail}"
                 />
             </l:VerticalLayout>  
         </content>
