--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -59,6 +59,26 @@
                     }"
                     text="{i18n>sendEmail}"
                 />
+            </l:VerticalLayout>
+            <l:VerticalLayout>
+                <Label 
+                    laberFor="salesAmout"
+                    text="{i18n>salesAmount}:"
+                />
+                <Input
+                    description="{/currencyCode}"  
+                    enabled="{/enabled}"
+                    id="salesAmount"
+                    value="{
+                        parts: [
+                            {path: '/salesAmount'},
+                            {path: '/currencyCode'}
+                        ],
+                       type: 'sap.ui.model.type.Currency',
+                       formatOptions: {showMeasure: false}
+                    }"
+                    width="200px"
+                />
             </l:VerticalLayout>  
         </content>
     </Panel>
