Passo 14 - Associação de Expressão

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -104,6 +104,7 @@
                     formatOptions: {showMeasure: false}
                 }"
                 numberUnit="{/currencyCode}"
+                numberState="{= ${products>UnitPrice} > ${/priceThreshold} ? 'Error' : 'Success' }"
             >
                 <attributes>
                     <ObjectAttribute 
